text fix on mobile devices

--- a/STYLES/AboutStyle.css
+++ b/STYLES/AboutStyle.css
@@ -36,6 +36,7 @@ header {
 
 .container {
     width: 80%;
+    max-width: 80%;
     margin: auto;
     padding: 20px;
 }
